--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,11 @@ section {
     border-radius: 20px;
 }
 
+.center-box{
+    display: flex;
+    justify-content: space-around;
+}
+
 /*#brand-image{
     height: 30px;
     margin: auto;
