More bio's, font change, added logo

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ section {
     background-color: #eeeeee;
     padding: 10px;
     border-radius: 20px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .center-box{
