--- a/css/styles.css
+++ b/css/styles.css
@@ -13,19 +13,7 @@ section {
     justify-content: space-around;
 }
 
-/*#brand-image{
-    height: 30px;
-    margin: auto;
-    vertical-align: center;
-    text-align: center;
-}*/
-
-/*.navbar-inverse .navbar-nav > .active > a, .navbar-default .navbar-nav > .active >   
- a:hover {background-color: #28597a;}, .navbar-default .navbar-nav > .active > a:focus {
-background-color: #28597a;
+.row{
+  margin-top: 20px;
+  margin-bottom: 20px
 }
-
- .nav > li > a:hover,
- .nav > li > a:focus {
-    text-decoration: none;
-    background-color: #28597a;*/
